updated Selenium Grid Changes

--- a/src/test/resources/Config/qa.config.properties
+++ b/src/test/resources/Config/qa.config.properties
@@ -1,8 +1,8 @@
-browser = chrome
+browser = 
 url = https://demowebshop.tricentis.com/
 
 headless = false
-incognito = true
+incognito = false
 
 highlight = false
 
@@ -10,4 +10,4 @@ username = tsharmaroy@gmail.com
 password = Deb&1989
 
 remote = true
-huburl =
+huburl = http://192.168.0.102:4444
