--- a/src/test/resources/Config/qa.config.properties
+++ b/src/test/resources/Config/qa.config.properties
@@ -1,4 +1,5 @@
 browser = 
+browserversion =
 url = https://demowebshop.tricentis.com/
 
 headless = false
@@ -10,4 +11,4 @@ username = tsharmaroy@gmail.com
 password = Deb&1989
 
 remote = true
-huburl = http://192.168.0.102:4444
+huburl = http://localhost:4444/wd/hub
